# ConvexHull

./: CMakeLists.txt  README.md  launch.sh  main.cpp
inc/: ConvexHull.hpp  Point.hpp
scripts/: graph.py
src/: ConvexHull.cpp  Point.cpp
